[metadata]
name = ClyphX
version = attr: clyphx.__version__
license_files = COPYING; COPYING.LESSER
long_description = file: README.md
long_description_content_type = text/markdown

[mypy]
python_version = 2.7
allow_redefinition = true
check_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
strict_optional = true
 strict_equality = false
no_implicit_optional = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = false


[flake8]
ignore =
    E221,  # multiple spaces before operator
    E241,  # multiple spaces after ':'
    E251,  # unexpected spaces around keyword / parameter equals
    E303,  # too many blank lines (2)
    E731,  # do not assign a lambda expression, use a def
    W503,  # line break before binary operator
exclude =
    .git,
    __pycache__,
    .pytest_cache,
max-complexity = 18  # ClyphX.handle_action_list_trigger()
max-line-length = 99
per-file-ignores =
    **/__init__.py: E402, F401,
inline-quotes = '
multiline-quotes = '''
docstring-quotes = '''
